Mars rover with akka and play